# first_web_server_django

./: .env.sample  .gitignore  README.md  pyproject.toml
board_service/: catalog_data.json
board_service/board_service/: asgi.py  settings.py  urls.py  wsgi.py
board_service/catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
board_service/catalog/management/commands/: product_filler_initial.py
board_service/catalog/migrations/: 0001_initial.py  0002_category_alter_product_changed_and_more.py  0003_alter_category_options_and_more.py  0003_alter_product_category.py  0004_feedback.py  0005_alter_feedback_country.py  0006_alter_feedback_options_alter_product_options_and_more.py  0007_alter_product_options.py  0008_blog_alter_category_options_alter_feedback_options_and_more.py  0009_alter_product_category_version.py  0010_product_user.py  0011_rename_user_product_user_product_blog_user_blog_and_more.py  0012_product_is_published_alter_feedback_country_and_more.py  0013_alter_product_is_published.py  0014_alter_product_options_alter_product_is_published.py
board_service/catalog/templates/catalog/: Blog_confirm_delete.html  Blog_detail.html  Blog_form.html  Blog_list.html  Category_confirm_delete.html  Category_form.html  Feedback_list.html  Product_form.html  Product_list.html  about_as.html  all_products.html  blog_detail.html  blog_form.html  index.html  (+12 more)
board_service/catalog/templatetags/: products_tags.py
board_service/users/: forms.py  models.py  urls.py  views.py
board_service/users/migrations/: 0001_initial.py  0002_user_user_identity.py
(+12 files in other folders)
